added ability to switch between login and register and made site mobile response with meta tag. I hate that meta tag

--- a/app/views/partials/_login_form.erb
+++ b/app/views/partials/_login_form.erb
@@ -8,10 +8,11 @@
         <input class="form-control" id="login_username" name="username" type="text" placeholder="Username">
       </div>
 
-      <div class="side-margins form-group">
+      <div class="form-group">
         <input class="form-control" id="login_password" name="password" type="password" placeholder="Password">
       </div>
     </div>
+    <p class='popup-caption'>Don't have a profile? <a id='login-to-register' href='/user/new'>Register here!</a></p>
     <div class='form-buttons text-center'>
       <button class="btn login-button" id="new_user_submit" type="submit">Login</button>
     </div>
