--- a/app/views/partials/_registration_form.erb
+++ b/app/views/partials/_registration_form.erb
@@ -11,8 +11,9 @@
   	  <input class="form-control" id="register_password" name="user[password]" type="password" placeholder="Password">
     </div>
   </div>
+  <p class='popup-caption'>Already have a profile? <a id='register-to-login' href='/login'>Login here!</a></p>
   <div class='form-buttons text-center'>
-	  <button class="btn login-button" id="new_user_submit" type="submit">Submit</button>
+    <button class="btn login-button" id="new_user_submit" type="submit">Submit</button>
   </div>
 </form>
 </div>
