--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,5 +1,5 @@
 <div id="login-form">
-  <div>LOGIN</div>
+  <h2>LOGIN</h2>
   <%= erb :'partials/_errors', locals: { object: @user } %>
   <div id='form-flash'></div>
   <form class="form-horizontal" action='/login' method='POST'>
