--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,9 +13,8 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
   <link rel="stylesheet" href="/css/application_klg.css">
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src='/js/bootstrap-confirmation.js'></script>
   <script src="/js/new-response.js"></script>
   <script src="/js/popup-submit.js"></script>
@@ -23,6 +22,7 @@
   <script src="/js/vote.js"></script>
   <script src="/js/error-messages.js"></script>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pile Excess</title>
   <link rel="icon" href="/garbage.ico">
 </head>
