--- a/public/css/application.css
+++ b/public/css/application.css
@@ -65,8 +65,6 @@
 }
 
 .main {
-  min-height: 555px;
-  min-width: 320px;
   padding-bottom: 10px;
 }
 
@@ -105,6 +103,11 @@
   text-align: center;
   margin-top: 0px;
   margin-bottom: 20px;
+}
+
+.popup-caption {
+  text-align: center;
+  margin-top: -25px;
 }
 
 .login-button, .login-button:hover, .login-button:link, .login-button:active {
@@ -233,10 +236,6 @@ ul {
   border-bottom: solid 1px gray;
   margin-bottom: 50px;
 }
-
-/*.question-content-wrapper {
-  display: inline-block;
-}*/
 
 .answers-count {
   margin: 20px;
